syntax = "proto3";

package pb;

import "refresh_token/refresh_token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/refresh_token";

message UpdateRefreshTokenRequest {
    int64 id = 1;
    int64 user_id = 2;
}

message UpdateRefreshTokenResponse {
    RefreshToken refreshToken = 1;
}